--- a/manifest.json
+++ b/manifest.json
@@ -4,30 +4,23 @@
   "version": "0.1.0",
   "description": "Download all IEEE results into a CSV file",
   "author": "Felipe Castillo",
-  "externally_connectable": {
-    "matches": ["https://ieeexplore.ieee.org/*"]
-  },
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
-  "content_scripts": [{
-    "matches": ["https://ieeexplore.ieee.org/search/searchresult.jsp*"],
-    "js": ["pageResults.js"]
-  }],
   "page_action": {
     "default_icon": {
-      "16": "images/ieee2csv16.png",
-      "32": "images/ieee2csv32.png",
-      "48": "images/ieee2csv48.png",
-      "128": "images/ieee2csv128.png"
+      "16": "images/electricity16.png",
+      "32": "images/electricity32.png",
+      "48": "images/electricity48.png",
+      "128": "images/electricity128.png"
     }
   },
   "icons": {
-    "16": "images/ieee2csv16.png",
-    "32": "images/ieee2csv32.png",
-    "48": "images/ieee2csv48.png",
-    "128": "images/ieee2csv128.png"
+    "16": "images/electricity16.png",
+    "32": "images/electricity32.png",
+    "48": "images/electricity48.png",
+    "128": "images/electricity128.png"
   },
   "permissions": ["activeTab", "declarativeContent"]
 }
