--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-standard": "^4.0.1"
   },
   "dependencies": {
+    "excel4node": "^1.7.2",
     "fs-extra": "^9.0.0",
     "lodash": "^4.17.15",
     "yargs": "^15.3.1"
