--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "excel4node": "^1.7.2",
     "fs-extra": "^9.0.0",
     "lodash": "^4.17.15",
+    "puppeteer": "^3.0.4",
     "yargs": "^15.3.1"
   }
 }
