--- a/manifest.json
+++ b/manifest.json
@@ -10,17 +10,17 @@
   },
   "page_action": {
     "default_icon": {
-      "16": "images/electricity16.png",
-      "32": "images/electricity32.png",
-      "48": "images/electricity48.png",
-      "128": "images/electricity128.png"
+      "16": "images/medium/electricity16.png",
+      "32": "images/medium/electricity32.png",
+      "48": "images/medium/electricity48.png",
+      "128": "images/medium/electricity128.png"
     }
   },
   "icons": {
-    "16": "images/electricity16.png",
-    "32": "images/electricity32.png",
-    "48": "images/electricity48.png",
-    "128": "images/electricity128.png"
+    "16": "images/medium/electricity16.png",
+    "32": "images/medium/electricity32.png",
+    "48": "images/medium/electricity48.png",
+    "128": "images/medium/electricity128.png"
   },
   "permissions": ["activeTab", "declarativeContent"]
 }
