fix: better naming for cli scripts

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "ieeexplore-search",
   "version": "0.1.0",
   "description": "IEEE results as workfiles",
-  "main": "src/index.js",
-  "bin": "src/cli.js",
+  "main": "src/cli-search.js",
+  "bin": "src/cli-search.js",
   "homepage": "https://github.com/fcastilloec/ieeexplore2csv#readme",
   "author": "Felipe Castillo",
   "license": "GPL-3.0-or-later",
