--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,25 +11,82 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        os: ['ubuntu-latest']
-    runs-on: ${{ matrix.os }}
-
+  test:
+    name: Testing
+    runs-on: 'ubuntu-latest'
     steps:
     - name: Get source
       uses: actions/checkout@v2
-
     - name: Use Node.js ${{ env.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ env.node-version }}
     - name: Install npm dependencies
       run: npm ci
-
     - name: Linting
       run: npm run lint
-
     - name: Testing
       run: npm run test
+
+  build:
+    name: Building
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/')
+    defaults:
+      run:
+        shell: bash
+    strategy:
+      matrix:
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+    runs-on: ${{ matrix.os }}
+    steps:
+    - name: Set variables
+      id: vars
+      run: |
+        [[ "${{ matrix.os }}" == "ubuntu-latest" ]] && DIST=linux || DIST=$(cut -d'-' -f 1 <<< ${{ matrix.os }})
+        echo "set-output name=DIST::$DIST"
+    - name: Get source
+      uses: actions/checkout@v2
+    - name: Use Node.js ${{ env.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ env.node-version }}
+    - name: Install npm dependencies
+      run: npm ci
+    - name: Build
+      run: |
+        npx pkg -t node${{ env.node-version }}-${{ steps.vars.outputs.DIST }}-x64 src/cli-search.js --output build/ieeeSearch
+        npx pkg -t node${{ env.node-version }}-${{ steps.vars.outputs.DIST }}-x64 src/cli-logic.js --output build/ieeeLogic
+        npx pkg -t node${{ env.node-version }}-${{ steps.vars.outputs.DIST }}-x64 src/cli-count.js --output build/ieeeCount
+        cp -r node_modules/puppeteer/.local-chromium build/puppeteer
+    - name: Tar files
+      working-directory: ./build
+      run: |
+        if [[ "${{ matrix.os }}" != "macos-latest" ]]; then TAR=tar; else brew install gnu-tar && TAR=gtar; fi
+        XZ_OPT=-0 $TAR -cJvf ../${{ steps.vars.outputs.DIST }}-x64.tar.xz .
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{ matrix.os }}
+        path: ${{ steps.vars.outputs.DIST }}-x64.tar.xz
+
+  publish:
+    name: Publish to Github Releases
+    needs: build
+    runs-on: 'ubuntu-latest'
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+    - name: Download artifacts
+      uses: actions/download-artifact@v2
+      with:
+        path: build/
+    - name: Move artifacts
+      working-directory: build/
+      run: find . -type f -exec mv -v '{}' . \;
+    - name: Create a release
+      uses: ncipollo/release-action@v1
+      with:
+        allowUpdates: true
+        artifacts: build/*.tar.xz
+        draft: true
+        token: ${{ secrets.GITHUB_TOKEN }}
