feat(search-scrap)!: use local Chrome installation
We no longer use the Chrome binary that comes with puppeteer, instead we
use a local Chrome browser.
This also helps when packaging the app for multiple platforms.

BREAKING CHANGE: A local Chrome installation is required for scrapping

Please make sure that a valid installation of Chrome exists

--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "axios": "^0.21.1",
     "excel4node": "^1.7.2",
     "fs-extra": "^9.0.1",
+    "locate-chrome": "^0.1.1",
     "lodash": "^4.17.20",
-    "puppeteer": "^5.5.0",
+    "puppeteer-core": "^5.5.0",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
