--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "release": "standard-version --sign",
     "start": "node src/index.js",
     "test": "nyc ava",
-    "postinstall": "husky install",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable"
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -47,7 +45,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
     "nyc": "^15.1.0",
-    "pinst": "^2.1.6",
     "standard-version": "^9.1.1"
   }
 }
