--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,7 @@ jobs:
       working-directory: ./build
       run: |
         if [[ "${{ matrix.os }}" != "macos-latest" ]]; then TAR=tar; else brew install gnu-tar && TAR=gtar; fi
-        XZ_OPT=-0 $TAR -cJvf ../${{ steps.vars.outputs.DIST }}-x64.tar.xz .
+        XZ_OPT=-0 $TAR -cJvf ../${{ steps.vars.outputs.DIST }}-x64.tar.xz *
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
