--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 env:
-  node-version: 14
+  node-version: 16
 
 on:
   push:
@@ -27,8 +27,6 @@ jobs:
       uses: actions/setup-node@v2.1.5
       with:
         node-version: ${{ env.node-version }}
-    - name: Update npm
-      run: npm i -g npm@latest
     - name: Install npm dependencies
       run: npm ci
     - name: Linting
@@ -36,8 +34,8 @@ jobs:
     - name: Testing
       run: npm run test
 
-  build:
-    name: Building
+  pack:
+    name: Packaging
     needs: test
     if: startsWith(github.ref, 'refs/tags/')
     defaults:
@@ -45,14 +43,14 @@ jobs:
         shell: bash
     strategy:
       matrix:
-        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
-    runs-on: ${{ matrix.os }}
+        os: ['ubuntu', 'macos', 'windows']
+    runs-on: ${{ matrix.os }}-latest
     steps:
     - name: Set variables
       id: vars
       run: |
-        [[ "${{ matrix.os }}" == "ubuntu-latest" ]] && DIST=linux || DIST=$(cut -d'-' -f 1 <<< ${{ matrix.os }})
-        echo "::set-output name=DIST::$DIST"
+        [[ "${{ matrix.os }}" == "ubuntu" ]] && DIST=linux || DIST=${{ matrix.os }})
+        echo "::set-output name=DIST::${DIST}"
         echo "::set-output name=dir::$(npm config get cache)"
     - uses: actions/cache@v2.1.5
       with:
@@ -78,8 +76,8 @@ jobs:
     - name: Tar files
       working-directory: ./build
       run: |
-        if [[ "${{ matrix.os }}" != "macos-latest" ]]; then TAR=tar; else brew install gnu-tar && TAR=gtar; fi
-        XZ_OPT=-0 $TAR -cJvf ../${{ steps.vars.outputs.DIST }}-x64.tar.xz *
+        [[ "${{ matrix.os }}" == "macos" ]] && TAR=gtar || TAR=tar
+        XZ_OPT=-0 ${TAR} -cJvf ../${{ steps.vars.outputs.DIST }}-x64.tar.xz *
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
@@ -88,7 +86,7 @@ jobs:
 
   publish:
     name: Publish to Github Releases
-    needs: build
+    needs: pack
     runs-on: 'ubuntu-latest'
     if: startsWith(github.ref, 'refs/tags/')
     steps:
