--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "yargs": "^17.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "ava": "^3.15.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
