--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "locate-chrome": "^0.1.1",
     "lodash": "^4.17.21",
     "puppeteer-core": "^10.0.0",
+    "readline-sync": "^1.4.10",
     "yargs": "^17.0.1"
   },
   "devDependencies": {
