ci: change dependabot to a weekly schedule

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   schedule:
-    interval: monthly
+    interval: weekly
     time: "17:00"
   open-pull-requests-limit: 10
   # Maintain dependencies for GitHub Actions
@@ -13,5 +13,5 @@ updates:
     prefix: chore
     include: scope
   schedule:
-    interval: monthly
+    interval: weekly
     time: "15:45"
