--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "axios": "^1.3.4",
     "excel4node": "^1.8.0",
     "fs-extra": "^11.1.1",
-    "locate-chrome": "^0.1.1",
+    "locate-app": "^2.0.0",
     "lodash": "^4.17.21",
     "puppeteer-core": "^19.8.0",
     "readline-sync": "^1.4.10",
