--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,9 @@ jobs:
         node-version: ${{ env.node-version }}
     - name: Install npm dependencies
       run: npm ci
+    - name: Generate release body
+      if: matrix.platform == 'linux'
+      run: bin/github_release_body.sh
     - name: Create executables
       run: |
         TARGET=node${{ env.node-version }}-${{ matrix.platform }}-x64
@@ -82,6 +85,13 @@ jobs:
       with:
         name: ${{ runner.os }}
         path: ${{ runner.os }}-x64.tar.xz
+    - name: Upload RELEASE.md
+      if: matrix.platform == 'linux'
+      uses: actions/upload-artifact@v3
+      with:
+        name: release.md
+        path: RELEASE.md
+        retention-days: 5
 
   publish:
     name: Publish to Github Releases
@@ -96,8 +106,6 @@ jobs:
     - name: Move artifacts
       working-directory: build/
       run: find . -type f -exec mv -v '{}' . \;
-    - name: Generate release body
-      run: bin/github_release_body.sh
     - name: Create a release
       uses: ncipollo/release-action@v1
       with:
@@ -105,4 +113,4 @@ jobs:
         artifacts: build/*.tar.xz
         draft: true
         token: ${{ secrets.GITHUB_TOKEN }}
-        bodyFile: RELEASE.md
+        bodyFile: build/RELEASE.md
