--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "axios": "^1.5.0",
     "excel4node": "^1.8.2",
     "fs-extra": "^11.1.1",
-    "locate-app": "^2.1.0",
     "lodash": "^4.17.21",
-    "puppeteer-core": "^21.1.1",
+    "puppeteer": "^21.2.1",
     "readline-sync": "^1.4.10",
     "yargs": "^17.7.2"
   },
