--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "release": "standard-version --sign",
     "test": "jest",
     "pkg": "pkg --compress GZip --public",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "axios": "^1.6.5",
