--- a/package.json
+++ b/package.json
@@ -36,13 +36,9 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-jsx-a11y": "^6.10.1",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-unicorn": "^56.0.0",
+    "globals": "^15.11.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "pkg": "^5.8.1",
