--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@yao-pkg/pkg": "^6.0.0",
     "eslint": "^9.13.0",
     "eslint-plugin-unicorn": "^56.0.0",
     "globals": "^15.12.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "pkg": "^5.8.1",
     "standard-version": "^9.5.0"
   }
 }
