--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "excel4node": "^1.8.2",
     "fs-extra": "^11.3.0",
     "locate-app": "^2.5.0",
