--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "release": "standard-version --sign",
+    "release": "commit-and-tag-version --sign",
     "test": "jest",
     "pkg": "pkg --compress GZip --public",
     "prepare": "husky"
@@ -38,11 +38,11 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@yao-pkg/pkg": "^6.2.0",
+    "commit-and-tag-version": "^12.5.0",
     "eslint": "^9.16.0",
     "eslint-plugin-unicorn": "^56.0.1",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "standard-version": "^9.5.0"
+    "jest": "^29.7.0"
   }
 }
