fix: run eslint and prettier
eslint-unicorn wasn't checking for errors, it needed a base config that was never there.
This commit uses the @eslint/js recommended configuration, together with node and import plugins.
In addition, Prettier is also run when committing to ensure a consisten standard.

This commit fixes a single misspelled function in cli-search.js, but mostly just fixes eslint.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,17 +1,17 @@
 version: 2
 updates:
-- package-ecosystem: npm
-  directory: "/"
-  schedule:
-    interval: weekly
-    time: "17:00"
-  open-pull-requests-limit: 10
-  # Maintain dependencies for GitHub Actions
-- package-ecosystem: github-actions
-  directory: "/"
-  commit-message:
-    prefix: chore
-    include: scope
-  schedule:
-    interval: weekly
-    time: "15:45"
+  - package-ecosystem: npm
+    directory: '/'
+    schedule:
+      interval: weekly
+      time: '17:00'
+    open-pull-requests-limit: 10
+    # Maintain dependencies for GitHub Actions
+  - package-ecosystem: github-actions
+    directory: '/'
+    commit-message:
+      prefix: chore
+      include: scope
+    schedule:
+      interval: weekly
+      time: '15:45'
