--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
           node-version: ${{ env.node-version }}
       - name: Install npm dependencies
         run: npm ci
+      - name: Install cspell
+        run: npm install -g cspell
       - name: Linting
         run: npm run lint
       - name: Testing
