--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "yargs": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.27.5",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.29.0",
