--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,20 +13,15 @@ on:
 jobs:
   test:
     name: Testing
-    runs-on: 'ubuntu-latest'
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/cache@v5
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
       - name: Get source
         uses: actions/checkout@v6
       - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v6
         with:
           node-version: ${{ env.node-version }}
+          cache: 'npm'
       - name: Install npm dependencies
         run: npm ci
       - name: Install cspell
@@ -38,7 +33,8 @@ jobs:
 
   publish:
     name: Publish to Github Releases
-    runs-on: 'ubuntu-latest'
+    runs-on: ubuntu-latest
+    needs: test
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Get source
