--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "axios": "^1.13.3",
+    "commander": "^14.0.3",
     "dotenv": "^17.2.3",
     "excel4node": "^1.8.2",
     "fs-extra": "^11.3.3",
