--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 env:
-  node-version: 24.7
+  node-version: 24
 
 on:
   push:
@@ -29,22 +29,79 @@ jobs:
       - name: Linting
         run: npm run lint
       - name: Testing
+        if: ${{ !env.ACT }}
         run: npm run test
+
+  pack:
+    name: Packaging
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/') || github.event.act
+    defaults:
+      run:
+        shell: bash
+    strategy:
+      matrix:
+        include:
+          - platform: linux
+            runner: ubuntu-latest
+          - platform: win
+            runner: windows-latest
+          - platform: macos
+            runner: macos-latest
+    runs-on: ${{ matrix.runner }}
+    steps:
+      - name: Get source
+        uses: actions/checkout@v4
+      - name: Use Node.js ${{ env.node-version }}
+        uses: actions/setup-node@v6
+        with:
+          node-version: ${{ env.node-version }}
+          cache: 'npm'
+      - name: Install npm dependencies
+        run: npm ci
+      - name: Bundle
+        run: node bin/build-pkg.mjs
+      - name: Create executables
+        run: |
+          TARGET=node${{ env.node-version }}-${{ matrix.platform }}-x64
+          npm run pkg -- -t ${TARGET} build/cli-search.cjs --output dist/ieeeSearch --no-bytecode --public-packages "*" --config .pkg.json
+          npm run pkg -- -t ${TARGET} build/cli-logic.cjs --output dist/ieeeLogic
+          npm run pkg -- -t ${TARGET} build/cli-count.cjs --output dist/ieeeCount
+      - name: Tar files
+        working-directory: ./dist
+        run: |
+          [[ "${{ matrix.platform }}" == "macos" ]] && TAR=gtar || TAR=tar
+          XZ_OPT=-0 ${TAR} -cJvf ../${{ runner.os }}-x64.tar.xz *
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ runner.os }}
+          path: ${{ runner.os }}-x64.tar.xz
+          compression-level: 0
 
   publish:
     name: Publish to Github Releases
     runs-on: ubuntu-latest
-    needs: test
-    if: startsWith(github.ref, 'refs/tags/')
+    needs: pack
+    if: startsWith(github.ref, 'refs/tags/') || github.event.act
     steps:
       - name: Get source
         uses: actions/checkout@v6
       - name: Generate release body
         run: bin/github_release_body.sh
+      - name: Download artifacts
+        uses: actions/download-artifact@v7
+        with:
+          path: dist/
+      - name: Move artifacts
+        working-directory: dist/
+        run: find . -type f -exec mv -v '{}' . \;
       - name: Create a release
         uses: ncipollo/release-action@v1
+        if: ${{ !env.ACT }}
         with:
           allowUpdates: true
+          artifacts: dist/*.tar.xz
           draft: true
           token: ${{ secrets.GITHUB_TOKEN }}
           bodyFile: RELEASE.md
