--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@eslint/js": "^9.39.2",
     "@yao-pkg/pkg": "^6.12.0",
     "commit-and-tag-version": "^12.6.1",
+    "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
