build: remove @babel/eslint-parser and comply with angular
@babel/eslint-parser was not needed.
Angular doesn't use chore anymore, even if it's supported by config-conventional
In addition 'chore' is ambiguous.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,11 +6,15 @@ updates:
       interval: weekly
       time: '17:00'
     open-pull-requests-limit: 10
+    commit-message:
+      prefix: build
+      include: scope
+
     # Maintain dependencies for GitHub Actions
   - package-ecosystem: github-actions
     directory: '/'
     commit-message:
-      prefix: chore
+      prefix: ci
       include: scope
     schedule:
       interval: weekly
