--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Get source
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Use Node.js ${{ env.node-version }}
         uses: actions/setup-node@v6
         with:
@@ -73,7 +73,7 @@ jobs:
           [[ "${{ matrix.platform }}" == "macos" ]] && TAR=gtar || TAR=tar
           XZ_OPT=-0 ${TAR} -cJvf ../${{ runner.os }}-x64.tar.xz *
       - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4 # act needs this version pinned
         with:
           name: ${{ runner.os }}
           path: ${{ runner.os }}-x64.tar.xz
@@ -90,7 +90,7 @@ jobs:
       - name: Generate release body
         run: bin/github_release_body.sh
       - name: Download artifacts
-        uses: actions/download-artifact@v7
+        uses: actions/download-artifact@v4 # act needs this version pinned
         with:
           path: dist/
       - name: Move artifacts
