build: remove Dependencies section from CHANGELOG
Tracking dependencies is more trouble than anything.
It's rare that we release a new version only because of a dependency.
We're adding "release" as valid type for commits,

--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,11 +1,7 @@
 {
   "types": [
-    { "type": "chore", "section": "Dependencies" },
     { "type": "feat", "section": "Features" },
     { "type": "fix", "section": "Bug Fixes" }
   ],
-  "scripts": {
-    "postchangelog": "node ./bin/dependencies.mjs"
-  },
-  "releaseCommitMessageFormat": "build(release): {{currentTag}}"
+  "releaseCommitMessageFormat": "release: {{currentTag}}"
 }
